syntax = "proto3";
import "google/protobuf/Timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "CareerCloud.gRPC.Protos";

package CareerCloud.gRPC;


service ApplicantEducationService{
	
rpc GetApplicantEducation(ApplicantEducationIdRequest) returns (ApplicantEducation);
rpc GetApplicantEducations(google.protobuf.Empty) returns (ApplicantEducations);
rpc AddApplicantEducation(ApplicantEducations) returns (google.protobuf.Empty);
rpc UpdateApplicantEducation(ApplicantEducations) returns (google.protobuf.Empty);
rpc DeleteApplicantEducation(ApplicantEducations) returns (google.protobuf.Empty);

}

message ApplicantEducationIdRequest{

string Id = 1;
}

message ApplicantEducation{
string Id=1;
string Applicant=2;
string Major=3;
string CertificateDiploma=4;
google.protobuf.Timestamp StartDate=5;
google.protobuf.Timestamp CompletionDate=6;
google.protobuf.Int32Value CompletePercent=7;

}
message ApplicantEducations{
	repeated ApplicantEducation AppEdu=1;
}
